--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -5,8 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
-    android:background="@color/main_background_color"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -49,17 +47,24 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/horizontalDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar"/>
+
         <TextView
             android:id="@+id/teamNames"
             style="@style/HeaderTextViewStyle"
-            android:layout_marginTop="16dp"
             android:paddingStart="10dp"
             android:text="@string/players"
             app:drawableLeftCompat="@drawable/ic_player"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar"
+            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider"
             tools:ignore="RtlSymmetry" />
 
         <TextView
@@ -144,24 +149,20 @@
             app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
 
 
-        <TextView
-            android:id="@+id/totalScoresLabel"
-            style="@style/HeaderTextViewStyle"
-            android:layout_marginTop="8dp"
-            android:text="@string/total_scores"
-            app:drawableLeftCompat="@drawable/ic_info"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/roundRecyclerViewDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf="@id/roundRecyclerView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView" />
-
-
+            app:layout_constraintStart_toStartOf="parent"/>
         <TextView
             android:id="@+id/player1TotalScore"
             style="@style/ScoreTextViewStyle"
             app:layout_constraintBottom_toTopOf="@+id/detailLabel"
             app:layout_constraintEnd_toStartOf="@id/totalScoreDivider1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/totalScoresLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/totalScoreDivider1"
@@ -171,7 +172,7 @@
             android:layout_gravity="center_vertical"
             app:layout_constraintStart_toEndOf="@+id/player1TotalScore"
             app:layout_constraintEnd_toStartOf="@id/player2TotalScore"
-            app:layout_constraintTop_toBottomOf="@id/totalScoresLabel"/>
+            app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
 
         <TextView
             android:id="@+id/player2TotalScore"
@@ -180,7 +181,7 @@
             app:layout_constraintEnd_toStartOf="@id/totalScoreDivider2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/totalScoreDivider1"
-            app:layout_constraintTop_toBottomOf="@+id/totalScoresLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/totalScoreDivider2"
@@ -190,7 +191,7 @@
             android:layout_gravity="center_vertical"
             app:layout_constraintStart_toEndOf="@+id/player2TotalScore"
             app:layout_constraintEnd_toStartOf="@id/player3TotalScore"
-            app:layout_constraintTop_toBottomOf="@id/totalScoresLabel"/>
+            app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
 
         <TextView
             android:id="@+id/player3TotalScore"
@@ -199,7 +200,7 @@
             app:layout_constraintEnd_toStartOf="@id/totalScoreDivider3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/totalScoreDivider2"
-            app:layout_constraintTop_toBottomOf="@+id/totalScoresLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/totalScoreDivider3"
@@ -209,7 +210,7 @@
             android:layout_gravity="center_vertical"
             app:layout_constraintStart_toEndOf="@+id/player3TotalScore"
             app:layout_constraintEnd_toStartOf="@id/player4TotalScore"
-            app:layout_constraintTop_toBottomOf="@id/totalScoresLabel"/>
+            app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
 
         <TextView
             android:id="@+id/player4TotalScore"
@@ -217,12 +218,13 @@
             app:layout_constraintBottom_toTopOf="@+id/detailLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/totalScoreDivider3"
-            app:layout_constraintTop_toBottomOf="@+id/totalScoresLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
 
         <TextView
             android:id="@+id/detailLabel"
             style="@style/HeaderTextViewStyle"
             android:text="@string/detail"
+            android:layout_marginTop="12dp"
             app:drawableLeftCompat="@drawable/ic_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -260,7 +262,6 @@
             android:lineSpacingExtra="4dp"
             android:maxLines="3"
             android:paddingStart="32dp"
-            android:textColor="@color/date_text_color"
             android:textSize="13sp"
             android:textStyle="normal"
             android:visibility="gone"
