--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="60dp"
-    android:background="@color/main_background_color"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".presentation.ui.finishedPartnerGame.FinishedPartnerGameFragment">
 
@@ -43,6 +42,14 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/horizontalDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar"/>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
@@ -52,7 +59,7 @@
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar">
+            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -119,8 +126,6 @@
             android:id="@+id/team1Name"
             style="@style/NameTextInputLayoutStyle"
             android:layout_marginStart="8dp"
-            android:background="@color/main_background_color"
-            android:backgroundTint="@color/main_background_color"
             android:visibility="invisible"
             app:boxStrokeColor="@android:color/transparent"
             app:boxStrokeWidth="0dp"
