Tasarımsal olarak bazı değişiklikler yapıldı

--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -53,8 +53,8 @@
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:text="@string/record_not_found"
-        android:textColor="@color/error_text_color"
         android:textSize="15sp"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
