--- a/app/src/main/res/layout/fragment_finished_single_game.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:background="@drawable/searchview_border"
         android:layoutDirection="rtl"
+        android:background="@drawable/searchview_border"
         app:closeIcon="@drawable/ic_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,7 @@
         app:queryHint="@string/search_player_hint"
         app:searchHintIcon="@drawable/ic_search"
         app:searchIcon="@drawable/ic_search"
-        app:theme="@style/SearchViewStyle"
-        app:tint="@color/searchview_text_color" />
+        app:theme="@style/SearchViewStyle" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -51,7 +50,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="-60dp"
         android:text="@string/record_not_found"
-        android:textColor="@color/error_text_color"
+        android:textStyle="bold"
         android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
