--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources >
-    <style name="Theme.OkeyScore" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.OkeyScore" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:statusBarColor">@color/status_bar_color</item>
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/primary_color</item>
