Yeni veritabanı ile ilgili uyum sorunları giderildi

--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -20,7 +20,6 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/toolbar_background_color"
             app:layout_constraintTop_toTopOf="parent">
 
             <RelativeLayout
@@ -47,14 +46,6 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/horizontalDivider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"/>
-
         <TextView
             android:id="@+id/teamNames"
             style="@style/HeaderTextViewStyle"
@@ -64,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider"
+            app:layout_constraintTop_toBottomOf="@+id/toolBar"
             tools:ignore="RtlSymmetry" />
 
         <TextView
