--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -15,7 +15,6 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@color/toolbar_background_color"
             app:layout_constraintTop_toTopOf="parent">
 
             <RelativeLayout
@@ -42,14 +41,6 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/horizontalDivider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"/>
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
@@ -59,7 +50,7 @@
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider">
+            app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
